--- a/Back-end/loginStyles.css
+++ b/Back-end/loginStyles.css
@@ -13,14 +13,69 @@ body{
     background-size: cover;
     background-position: center;
 }
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    background: grey;
+    border:4px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(100%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
+}
+
+.ProjectName  {
+    font-size: 2em;
+    color: white;
+    user-select: none;
+}
+
+.navigation a {
+    position: relative;
+    font-size: 1.1em;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+}
+
+.navigation .loginButton{
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid white;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: white;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: 0.5s;
+}
+
+.navigation .loginButton:hover{
+    background:white;
+    color: black;
+}
+
 .wrapper{
     width: 420px;
     background:transparent;
     border:2px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
-    color: #fff;
+    color: white;
     border-radius: 12px;
     padding: 30px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 .wrapper h1{
     font-size: 36px;
@@ -32,6 +87,26 @@ body{
     height: 50px;
     margin: 30px 0;
 }
+
+.wrapper .form-login{
+    transition: transform 0.2s ease;
+}
+
+.wrapper.active .form-login{
+    transform: none;
+    transform: translateX(-400px);
+}
+
+.wrapper .form-register{
+    position: absolute;
+    transition: transform 0.2s ease;
+    transform: translateX(400px);
+}
+.wrapper.active .form-register{
+    transition: transform 0.2s ease;
+    transform: translateX(0);
+}
+
 .input-box input{
     width: 100%;
     height: 100%;
@@ -41,11 +116,11 @@ body{
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: white;
     padding: 20px 45px 20px 20px;
 }
 .input-box input::placeholder{
-    color: #fff;
+    color: white;
 }
 .input-box i{
     position: absolute;
@@ -57,7 +132,7 @@ body{
 .wrapper .btn{
     width: 100%;
     height: 40px;
-    background: #fff;
+    background: white;
     border: none;
     outline: none;
     border-radius: 40px;
@@ -74,10 +149,23 @@ body{
     margin: 20px;
 }
 .register-link p a{
-    color: #fff;
+    color: white;
     text-decoration: none;
     font-weight: 600;
 }
 .register-link p a:hover{
+    text-decoration: underline;
+}
+.wrapper .login-link{
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px;
+}
+.login-link p a{
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+}
+.login-link p a:hover{
     text-decoration: underline;
 }
