--- a/Application/Front End/cssFiles/loginStyles.css
+++ b/Application/Front End/cssFiles/loginStyles.css
@@ -19,9 +19,9 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 15px 100px;
     background: grey;
-    border:4px solid rgba(255, 255, 255, 0.2);
+    border-bottom:4px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(100%);
     display: flex;
     justify-content: space-between;
@@ -168,4 +168,14 @@ header {
 }
 .login-link p a:hover{
     text-decoration: underline;
+}
+.messageDiv{
+    background-color: red;
+    color:white;
+    padding:10px 20px;
+    margin:10px;
+    border-radius:5px;
+    font-size: 1rem;
+    opacity: 0;
+    animation: fadeOut 7s forwards;
 }
