--- a/Application/Front_End/cssFiles/SafetyInformation.css
+++ b/Application/Front_End/cssFiles/SafetyInformation.css
@@ -1,5 +1,7 @@
 /* Global Modifiers */
-
+body {
+    background-color: #EAE4DB;
+}
 
 /* Header */
 .header h2{
@@ -10,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .header .navigation {
@@ -24,6 +27,26 @@
     background-color: #A60F2D ;
 }
 
+.header {
+    background: #333;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    border-radius: 8px;
+    width: 100vw;
+}
+
+.header nav {
+    display: flex;
+    justify-content: space-evenly;
+    color:#f4f4f4;
+}
+
+.header a {
+    text-decoration-style: none;
+    color: white;
+}
+
 /* OVERALL REMINDER */
 .OverallReminder {
     background-color: #A60F2D;
@@ -35,8 +58,7 @@
 /*SAFETY INFORMATION*/
 /*Active Shooter*/
 .ActiveShooterContainer {
-    background-color: #726E6D;
-    color: white;
+    color: #333;
     padding: 3px;
 }
 
@@ -46,8 +68,7 @@
 
 /*Fire Safety*/
 .FireSafety {
-    background-color: #726E6D;
-    color: white;
+    color: #333;
     padding: 3px;
 }
 /*Medical Safety and Advice*/
