--- a/Application/Front_End/cssFiles/SubmitIncidentReport.css
+++ b/Application/Front_End/cssFiles/SubmitIncidentReport.css
@@ -1,12 +1,35 @@
 body {
     font-family: Arial, sans-serif;
-    display: flex;
     height: 100vh;
-    justify-content: center;
-    align-items: center;
     background-color: #f4f4f4;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
+
+.header {
+    background: #333;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    border-radius: 8px;
+    margin-bottom: 20vw;
+    width: 100vw;
+}
+
+.header nav {
+    display: flex;
+    justify-content: space-evenly;
+    color:#f4f4f4;
+}
+
+.header a {
+    text-decoration-style: none;
+    color: white;
+}
+
 .container {
+    align-items: center;
     background: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -14,7 +37,12 @@ body {
     width: 100%;
     max-width: 400px;
 }
-label, input, textarea, button {
+
+.container h2 {
+    text-align:center;
+}
+
+.container label, input, textarea, button, select {
     display: block;
     width: 100%;
     margin-bottom: 10px;
