--- a/Application/Front_End/cssFiles/loginStyles.css
+++ b/Application/Front_End/cssFiles/loginStyles.css
@@ -19,9 +19,9 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 15px 100px;
     background: grey;
-    border:4px solid rgba(255, 255, 255, 0.2);
+    border-bottom:4px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(100%);
     display: flex;
     justify-content: space-between;
@@ -66,6 +66,7 @@ header {
 
 .wrapper{
     width: 420px;
+    height: 400px;
     background:transparent;
     border:2px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
@@ -76,7 +77,12 @@ header {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    transition: height 0.2s ease;
 }
+.wrapper.active{
+    height: 480px;
+}
+
 .wrapper h1{
     font-size: 36px;
     text-align: center;
@@ -168,4 +174,14 @@ header {
 }
 .login-link p a:hover{
     text-decoration: underline;
+}
+.messageDiv{
+    background-color: red;
+    color:white;
+    padding:10px 20px;
+    margin:10px;
+    border-radius:5px;
+    font-size: 1rem;
+    opacity: 0;
+    animation: fadeOut 7s forwards;
 }
