--- a/Application/Front_End/cssFiles/FeedbackForm.css
+++ b/Application/Front_End/cssFiles/FeedbackForm.css
@@ -1,36 +1,67 @@
-.body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
     min-height: 100vh;
-    background: url(../Assets/Clocktower-Dusk.jpg);
+    background: url('../Assets/Clocktower-Dusk.jpg');
     background-size: cover;
     background-position: center;
 }
 
 header {
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.2);
     position: static;
-    width:fit-content 100;
-    height: 50px;
+    width: 100;
+    height: 6;
     padding: 15px 100px;
     background: grey;
-    border-bottom:4px solid rgba(255, 255, 255, 0.2);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: space-evenly;
+    font-size: 1em;
+    text-decoration: none;
+}
+
+.navigation a {
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.navigation a:hover {
+    text-decoration: none;
+    background-color: black;
+    color: white;
+}
+
+.navigation a:active {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+
+}
+
 .FeedbackForm{
     position:absolute;
-    left: 30%;
-    top: 30%;
+    left: 35%;
+    top: 35%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     padding: 50px;
-    width: 40%;
-    background-color: antiquewhite;
+    width: 25%;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 }
 
 .FeedbackForm input,
@@ -41,4 +72,17 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+.FeedbackForm h2 {
+    font-size: 2em;
+    color: antiquewhite;
+    user-select: none;
+    padding-bottom: 20px;
+}
+
+.FeedbackForm label {
+    font-size: 1.2em;
+    color: antiquewhite;
+    user-select: none;
 }
