--- a/Application/Front_End/cssFiles/SubmitIncidentReport.css
+++ b/Application/Front_End/cssFiles/SubmitIncidentReport.css
@@ -30,6 +30,8 @@ body {
 }
 
 .container {
+    position: absolute;
+    top: 20%;
     align-items: center;
     background: #fff;
     padding: 20px;
