--- a/Application/Front_End/cssFiles/FeedbackForm.css
+++ b/Application/Front_End/cssFiles/FeedbackForm.css
@@ -6,46 +6,23 @@ body {
 }
 
 header {
-    border-radius: 10px;
-    backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 0.2);
-    position: static;
-    width: 100;
-    height: 6;
-    padding: 15px 100px;
-    background: grey;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    border-radius: 8px;
+    width: 100vw;
 }
 
-.navigation {
+header nav {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
     justify-content: space-evenly;
-    font-size: 1em;
-    text-decoration: none;
+    color:#f4f4f4;
 }
 
-.navigation a {
-    color: black;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 10px;
-}
-
-.navigation a:hover {
-    text-decoration: none;
-    background-color: black;
+header a {
+    text-decoration-style: none;
     color: white;
-}
-
-.navigation a:active {
-    background-color: black;
-    color: white;
-    text-decoration: none;
-
 }
 
 .FeedbackForm{
