--- a/Application/Front_End/cssFiles/SafetyInformation.css
+++ b/Application/Front_End/cssFiles/SafetyInformation.css
@@ -10,15 +10,23 @@ body {
 /* Header */
 
 header {
-    position: static;
-    width:fit-content 100;
-    height: 50px;
-    padding: 15px 100px;
-    background: grey;
-    border-bottom:4px solid rgba(255, 255, 255, 0.2);
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    border-radius: 8px;
+    width: 100vw;
+}
+
+header nav {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-evenly;
+    color:#f4f4f4;
+}
+
+header a {
+    text-decoration-style: none;
+    color: white;
 }
 
 .ProjectName  {
