--- a/Application/Front_End/cssFiles/SubmitIncidentReport.css
+++ b/Application/Front_End/cssFiles/SubmitIncidentReport.css
@@ -9,12 +9,11 @@ body {
 }
 
 .header {
-    background: #333;
+    background-color: #333;
     color: #fff;
     padding: 15px;
     text-align: center;
     border-radius: 8px;
-    margin-bottom: 20vw;
     width: 100vw;
 }
 
@@ -22,6 +21,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     color:#f4f4f4;
+    text-decoration-style: none;
 }
 
 .header a {
