--- a/Application/Front_End/cssFiles/HomePageStyles.css
+++ b/Application/Front_End/cssFiles/HomePageStyles.css
@@ -6,6 +6,7 @@
     font-family: "Poppins", sans-serif;
 }
 body {
+	overflow: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -84,6 +85,7 @@ svg {
 .sidebarNavigation {
 	padding-top: 10px;
 	padding-bottom: 10px;
+	
 	ul {
 		list-style-type: none;
 		margin: 0;
@@ -96,6 +98,7 @@ svg {
 		display: flex;
 		padding: 1em;
 		position: relative;
+		align-items: center;
 		text-decoration: none;
 		font-size: 20px;
 		transition: all 0.3s ease;
@@ -135,6 +138,7 @@ svg {
 }
 .incidentSearch {
 	width: 100%;
+	height: 100%;
 	padding: 1.5rem;
 	background-color: white;
 	border-radius: 16px;
@@ -208,7 +212,7 @@ svg {
 }
 .incidentSearch .incidentList {
 	margin-top: 16px;
-    max-height: 240px;
+    max-height: 260px;
     overflow: auto;
     border: 1px solid #ccc;
     border-radius: 8px;
