--- a/Application/Front_End/cssFiles/loginStyles.css
+++ b/Application/Front_End/cssFiles/loginStyles.css
@@ -5,6 +5,7 @@
     font-family: "Poppins", sans-serif;
 }
 body{
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
