--- a/Application/Front_End/cssFiles/SubmitIncidentReport.css
+++ b/Application/Front_End/cssFiles/SubmitIncidentReport.css
@@ -20,7 +20,7 @@ body {
 .header nav {
     display: flex;
     justify-content: space-evenly;
-    color:#f4f4f4;
+    color: #f4f4f4;
     text-decoration-style: none;
 }
 
@@ -42,14 +42,52 @@ body {
 }
 
 .container h2 {
-    text-align:center;
+    text-align: center;
 }
 
-.container label, input, textarea, button, select {
+.container label,
+input,
+textarea,
+button,
+select {
     display: block;
     width: 100%;
     margin-bottom: 10px;
 }
+
 textarea {
     resize: none;
+}
+
+
+#loading-spinner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #3498db;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
