--- a/Application/Front_End/cssFiles/FeedbackForm.css
+++ b/Application/Front_End/cssFiles/FeedbackForm.css
@@ -3,32 +3,54 @@ body {
     background: url('../Assets/Clocktower-Dusk.jpg');
     background-size: cover;
     background-position: center;
+    overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    flex-direction: column;
+    font-family: "Poppins", sans-serif;
 }
 
 header {
+    position: fixed;
+	top: 0;
+	left: 0;
     background-color: #333;
     color: #fff;
-    padding: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-align: center;
     border-radius: 8px;
-    width: 100vw;
+    width: 100%;
+    box-sizing: border-box;
 }
-
 header nav {
     display: flex;
     justify-content: space-evenly;
-    color:#f4f4f4;
-}
-
-header a {
+    color: #f4f4f4;
     text-decoration-style: none;
+}
+header a{
+    position: relative;
+    font-size: 1.1em;
     color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: 0.5s;
+    display: inline-block;
+}
+header a:hover{
+    transform: scale(1.15);
+}
+.ProjectName  {
+    font-size: 2em;
+    color: white;
+    user-select: none;
 }
 
 .FeedbackForm{
     position:absolute;
-    left: 35%;
-    top: 35%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
