--- a/Application/Front_End/cssFiles/loginStyles.css
+++ b/Application/Front_End/cssFiles/loginStyles.css
@@ -42,6 +42,11 @@ header {
     text-decoration: none;
     font-weight: 500;
     margin-left: 40px;
+    transition: 0.5s;
+    display: inline-block;
+}
+.navigation a:hover{
+    transform: scale(1.15);
 }
 
 .navigation .loginButton{
@@ -60,6 +65,7 @@ header {
 }
 
 .navigation .loginButton:hover{
+    transform: scale(1.1);
     background:white;
     color: black;
 }
